[package]
name = "chip-8"
version = "0.1.0"
edition = "2021"
authors = ["Joey Harrison <Joeyh021@icloud.com>"]
readme = "README.md"
license = "MIT"
description = "A CHIP-8 Emulator, along with a trait for building one yourself!"

[dependencies]
pixels = "0.9.0"
winit = "0.26"
winit_input_helper = "0.11"
anyhow = "1.0"
rand = "0.8.5"
crossbeam = "0.8.1"

[lib]
name = "chip8_base"
path = "src/lib.rs"

[[bin]]
name = "chip8"
path = "src/main.rs"
