[package]
name = "rs118-chip8"
version = "0.2.0"
edition = "2021"
authors = ["Joey Harrison <joeyh021@icloud.com>"]
repository = "https://github.com/uwcs/rs118-chip8"
homepage = "https://rs118.uwcs.co.uk"
readme = "README.md"
license = "MIT"
description = "Yet another CHIP-8 interpreter, built for use in RS118."

[dependencies]
chip8_base = { path = "../chip8-base" }
clap = { version = "3.1.6", features = ["cargo", "derive"] }
rand = "0.8.5"
